# CursorJuceTemplate

./: .cursorignore  .cursorrules  .gitignore  CMakeLists.txt  README.md  build_and_run.sh  setup.sh
.cursor/: commands.json  context.md  snippets.json
.cursor/templates/: README.md
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
